[project]
name = "standardebooks"
description = "The toolset used to produce Standard Ebooks epub ebooks."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
authors = [
    { name = "Standard Ebooks", email = "admin@standardebooks.org" }
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3"
]	
keywords=["ebooks", "epub"]

requires-python = "==3.10.12"
dependencies = [
    "cairosvg==2.7.1",
    "chardet==5.2.0",
    "cssselect==1.2.0",
    "cssutils==2.9.0",
    "ftfy==6.0.3",
    "gitpython==3.1.41",
    "importlib_resources==1.0.2",
    "lxml==4.9.3",
    "natsort==8.4.0",
    "pillow==10.3.0",
    "psutil==5.9.6",
    "pyphen==0.14.0",
    "regex==2023.10.3",
    "requests==2.32.0",
    "rich==13.7.0",
    "roman==4.1",
    "selenium==4.9.0",
    "setuptools==70.0.0",
    "smartypants==2.0.1",
    "tinycss2==1.2.1",
    "titlecase==2.4",
    "unidecode==1.3.7"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://standardebooks.org/tools"
"Source" = "https://standardebooks.org/tools"

[project.scripts]
se = "se.main:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = [
    "src/se",
]

[tool.hatch.version]
path = "src/se/__init__.py"
pattern = "^VERSION = ['\"](?P<version>[^'\"]+)['\"]"